tests/mm0_mmu/fail/bad-sort2134.mm0
-- bad modifier order
strict pure provable free sort s2134;